@@ -139,39 +139,112 @@ inline float synthv1_freq ( float note )
 }
 
 
-// parameter port
+// parameter port (basic)
 
 class synthv1_port
 {
 public:
 
-	synthv1_port() : m_port(NULL), m_value(0.0f), m_cache(false) {}
+	synthv1_port() : m_port(NULL), m_value(0.0f), m_changed(0) {}
 
 	void set_port(float *port)
-		{ m_port = port; m_cache = false; }
+		{ m_port = port; }
 	float *port() const
 		{ return m_port; }
 
-	void set_value(float value, bool cache)
-		{ m_value = value; m_cache = cache; if (!cache) set_port_value(value); }
-	float value() const
-		{ return (m_cache ? m_value : port_value()); }
+	virtual void set_value(float value, bool cache)
+	{
+		m_value = value;
 
-	float operator *() const
-		{ return value(); }
+		if (cache)
+			++m_changed;
+		else
+			update_port();
+	}
+
+	float value() const
+		{ return m_value; }
+
+	virtual float tick(uint32_t /*nstep*/)
+		{ probe_port(); return value(); }
+
+	float operator *()
+		{ return tick(1); }
 
 protected:
 
-	void set_port_value(float value)
-		{ if (m_port) *m_port = value; }
-	float port_value() const
-		{ return (m_port ? *m_port : m_value); }
+	void update_port()
+	{
+		if (m_port) {
+			*m_port = m_value;
+			m_changed = 0;
+		}
+	}
+
+	void probe_port()
+	{
+		if (m_changed > 0)
+			update_port();
+		else
+		if (m_port && ::fabsf(*m_port - m_value) > 0.001f)
+			set_value(*m_port, true);
+	}
 
 private:
 
-	float *m_port;
-	float  m_value;
-	bool   m_cache;
+	float   *m_port;
+	float    m_value;
+	uint32_t m_changed;
+
+};
+
+
+// parameter port (smoothed)
+
+class synthv1_port2 : public synthv1_port
+{
+public:
+
+	synthv1_port2() : m_vtick(0.0f), m_vstep(0.0f), m_nstep(0) {}
+
+	void set_value(float value, bool cache)
+	{
+		m_vtick = synthv1_port::value();
+
+		if (cache) {
+			m_nstep = NSTEP;
+			m_vstep = (value - m_vtick) / float(m_nstep);
+		} else {
+			m_nstep = 0;
+			m_vstep = 0.0f;
+		}
+
+		synthv1_port::set_value(value, cache);
+	}
+
+	float tick(uint32_t nstep)
+	{
+		if (m_nstep == 0)
+			return synthv1_port::tick(nstep);
+
+		if (m_nstep >= nstep) {
+			m_vtick += m_vstep * float(nstep);
+			m_nstep -= nstep;
+		} else {
+			m_vtick += m_vstep * float(m_nstep);
+			m_nstep  = 0;
+		}
+
+		return m_vtick;
+	}
+
+private:
+
+	static const uint32_t NSTEP = 32;
+
+	float    m_vtick;
+	float    m_vstep;
+	uint32_t m_nstep;
 };
 
 
@@ -345,20 +418,20 @@ struct synthv1_aux
 
 struct synthv1_dco
 {
-	synthv1_port shape1;
-	synthv1_port width1;
-	synthv1_port bandl1;
-	synthv1_port shape2;
-	synthv1_port width2;
-	synthv1_port bandl2;
-	synthv1_port balance;
-	synthv1_port detune;
-	synthv1_port phase;
-	synthv1_port ringmod;
-	synthv1_port octave;
-	synthv1_port tuning;
-	synthv1_port glide;
-	synthv1_port envtime;
+	synthv1_port  shape1;
+	synthv1_port2 width1;
+	synthv1_port  bandl1;
+	synthv1_port  shape2;
+	synthv1_port2 width2;
+	synthv1_port  bandl2;
+	synthv1_port2 balance;
+	synthv1_port2 detune;
+	synthv1_port2 phase;
+	synthv1_port2 ringmod;
+	synthv1_port2 octave;
+	synthv1_port2 tuning;
+	synthv1_port2 glide;
+	synthv1_port  envtime;
 
 	float envtime0;
 };
@@ -368,13 +441,13 @@ struct synthv1_dco
 
 struct synthv1_dcf
 {
-	synthv1_port cutoff;
-	synthv1_port reso;
-	synthv1_port type;
-	synthv1_port slope;
-	synthv1_port envelope;
+	synthv1_port2 cutoff;
+	synthv1_port2 reso;
+	synthv1_port  type;
+	synthv1_port  slope;
+	synthv1_port2 envelope;
 
-	synthv1_env  env;
+	synthv1_env   env;
 };
 
 
@@ -382,20 +455,20 @@ struct synthv1_dcf
 
 struct synthv1_lfo
 {
-	synthv1_port shape;
-	synthv1_port width;
-	synthv1_port bpm;
-	synthv1_port rate;
-	synthv1_port sync;
-	synthv1_port sweep;
-	synthv1_port pitch;
-	synthv1_port ringmod;
-	synthv1_port cutoff;
-	synthv1_port reso;
-	synthv1_port panning;
-	synthv1_port volume;
+	synthv1_port  shape;
+	synthv1_port2 width;
+	synthv1_port2 bpm;
+	synthv1_port2 rate;
+	synthv1_port  sync;
+	synthv1_port2 sweep;
+	synthv1_port2 pitch;
+	synthv1_port2 ringmod;
+	synthv1_port2 cutoff;
+	synthv1_port2 reso;
+	synthv1_port2 panning;
+	synthv1_port2 volume;
 
-	synthv1_env  env;
+	synthv1_env   env;
 };
 
 
@@ -403,9 +476,9 @@ struct synthv1_lfo
 
 struct synthv1_dca
 {
-	synthv1_port volume;
+	synthv1_port2 volume;
 
-	synthv1_env  env;
+	synthv1_env   env;
 };
 
 
@@ -427,10 +500,10 @@ struct synthv1_def
 
 struct synthv1_out
 {
-	synthv1_port width;
-	synthv1_port panning;
-	synthv1_port fxsend;
-	synthv1_port volume;
+	synthv1_port2 width;
+	synthv1_port2 panning;
+	synthv1_port2 fxsend;
+	synthv1_port2 volume;
 };
 
 
@@ -438,11 +511,11 @@ struct synthv1_out
 
 struct synthv1_cho
 {
-	synthv1_port wet;
-	synthv1_port delay;
-	synthv1_port feedb;
-	synthv1_port rate;
-	synthv1_port mod;
+	synthv1_port2 wet;
+	synthv1_port2 delay;
+	synthv1_port2 feedb;
+	synthv1_port2 rate;
+	synthv1_port2 mod;
 };
 
 
@@ -450,10 +523,10 @@ struct synthv1_cho
 
 struct synthv1_fla
 {
-	synthv1_port wet;
-	synthv1_port delay;
-	synthv1_port feedb;
-	synthv1_port daft;
+	synthv1_port2 wet;
+	synthv1_port2 delay;
+	synthv1_port2 feedb;
+	synthv1_port2 daft;
 };
 
 
@@ -461,11 +534,11 @@ struct synthv1_fla
 
 struct synthv1_pha
 {
-	synthv1_port wet;
-	synthv1_port rate;
-	synthv1_port feedb;
-	synthv1_port depth;
-	synthv1_port daft;
+	synthv1_port2 wet;
+	synthv1_port2 rate;
+	synthv1_port2 feedb;
+	synthv1_port2 depth;
+	synthv1_port2 daft;
 };
 
 
@@ -473,10 +546,10 @@ struct synthv1_pha
 
 struct synthv1_del
 {
-	synthv1_port wet;
-	synthv1_port delay;
-	synthv1_port feedb;
-	synthv1_port bpm;
+	synthv1_port2 wet;
+	synthv1_port2 delay;
+	synthv1_port2 feedb;
+	synthv1_port2 bpm;
 };
 
 
@@ -484,11 +557,11 @@ struct synthv1_del
 
 struct synthv1_rev
 {
-	synthv1_port wet;
-	synthv1_port room;
-	synthv1_port damp;
-	synthv1_port feedb;
-	synthv1_port width;
+	synthv1_port2 wet;
+	synthv1_port2 room;
+	synthv1_port2 damp;
+	synthv1_port2 feedb;
+	synthv1_port2 width;
 };
 
 // dynamic(compressor/limiter)
